handle new room endpoint
